--- a/_includes/about.html
+++ b/_includes/about.html
@@ -5,14 +5,14 @@
             <h3>{{ site.aboutTitle }}</h3>
             <div class="row about-details">
                 <p class="lead text-justify">
-A series of algorithmic computational biology conferences bridging the areas of computational, mathematical, statistical and biological sciences. The conference features keynote talks by preeminent scientists in life sciences, presentations of ground breaking research in computational biology, selected over the course of a highly-rigorous peer-review process, and poster sessions on the latest research progress.
-For more about our history, see our <a href="/history/">history page</a> or our <a href="https://www.youtube.com/@recomb-seq">YouTube channel</a>.
+
+This satellite conference focuses on algorithmic research addressing privacy, security, bias, and fairness challenges in biomedical research. The program includes keynote presentations by renowned experts in the field, alongside contributed talks and poster presentations. All submissions will undergo a rigorous peer-review process.
+                    
                 </p>
                     
                 <h4>Venue</h4>
                 <p class="lead text-justify">
-                 RECOMB-seq 2025 and other RECOMB satellite meetings will be held in THE COMMONS of Yonsei University. All registration will be processed by the RECOMB local organization.
-                    Detailed information <a href="https://recomb.org/recomb2025">at the RECOMB website.</a>
+                 RECOMB-P&E 2025 and other RECOMB meetings will be held in THE COMMONS of Yonsei University. All registrations will be coordinated by the local RECOMB organization. See the <a href="https://recomb.org/recomb2025">main RECOMB website</a> for more information.
                 </p>    
 
         </div>
