--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,18 +3,20 @@
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
             <h3>{{ site.aboutTitle }}</h3>
+            <hr>
             <div class="row about-details">
                 <p class="lead text-justify">
-
-This satellite conference focuses on algorithmic research addressing privacy, security, bias, and fairness challenges in biomedical research. The program includes keynote presentations by renowned experts in the field, alongside contributed talks and poster presentations. All submissions will undergo a rigorous peer-review process.
-                    
+                This satellite conference focuses on algorithmic research addressing privacy, security, bias, and fairness challenges in biomedical research. The program includes keynote presentations by renowned experts in the field, alongside contributed talks and poster presentations. All submissions will undergo a rigorous peer-review process.
                 </p>
-                    
+
                 <h4>Venue</h4>
+                <hr>
                 <p class="lead text-justify">
                  RECOMB-P&E 2025 and other RECOMB meetings will be held in THE COMMONS of Yonsei University. All registrations will be coordinated by the local RECOMB organization. See the <a href="https://recomb.org/recomb2025">main RECOMB website</a> for more information.
                 </p>    
-
+                <p class="maps">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.6686390684267!2d126.93474297624238!3d37.562870024337734!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9994bdafcd15%3A0x8f683bda8d45bf8e!2sBaekyang%20Nuri(The%20Commons)!5e0!3m2!1sen!2sus!4v1729712534430!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </p>
         </div>
     </div>
 </section>
