--- a/_includes/papers.html
+++ b/_includes/papers.html
@@ -2,7 +2,7 @@
 <section id="blog" class="blog">
     <div class="content-wrapper text-left">
         <div class="col-md-10 col-sm-10 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">
-            <h3>Call for Papers</h3>
+            <!--<h3>Call for Papers</h3>-->
             <div class="col-lg-8 col-md-10 col-xs-12">
                 {% for post in site.paper-calls %}
                     <article class="row post">
@@ -32,6 +32,7 @@
                                 </ul>
                             </div>
                         </div>
+                        <hr>
                         <p class="post-body">{{ post.content }} {% if blog.readmore == false %}<a href="{{ site.baseurl | append: post.url }}">continue reading</a>{% endif %}</p>
                     </article>
                 {% endfor %} 
