--- a/_includes/schedule2025.html
+++ b/_includes/schedule2025.html
@@ -2,10 +2,10 @@
 <section id="schedule" class="schedule">
     <div class="content-wrapper text-left">
         <div class="col-md-8 col-sm-8 col-lg-8 col-lg-offset-2 col-md-offset-2 col-sm-offset-1">
-        <h2>Program of RECOMB-P&#38;E 2025 (TBD)</h2>
+        <h3>Program of RECOMB-P&#38;E 2025</h3>
 
 <p>&nbsp;</p>
-<h4>Friday, April 25, 2025</h4>
+<h4>Friday, April 25, 2025 (TBD)</h4>
 
 <!--
 <figure class="table" style="width:100%;">
