--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,14 +1,9 @@
 <!-- Begin Footer -->
 <footer id="footer" class="footer">
 	<div class="row">
-		<div class="pull-left col-md-6 col-xs-6">
-			<div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="{{ site.url }}"></div>
-		</div>
-		<div class="logo logo-footer logo-gray pull-right"></div>
-	</div>
-	<div class="row">
 		{% for block in site.footerBlocks %}
-        {% assign colWidth = 12 | divided_by: forloop.length %}
+                {% assign length = forloop.length | plus: 1 %}
+        {% assign colWidth = 12 | divided_by: length %}
 		<div class="col-md-{{ colWidth }} col-xs-6">
 			<h5>{{ block.title }}</h5>
 			<ul>
@@ -18,6 +13,12 @@
 			</ul>
 		</div>
 		{% endfor %}
+		<div class="col-md-{{ colWidth }} col-xs-6">
+                    <div class="pull-left col-md-6 col-xs-6">
+                            <div class="g-plusone" data-size="medium" data-annotation="inline" data-width="300" data-href="{{ site.url }}"></div>
+                    </div>
+                    <div class="logo logo-footer logo-gray pull-right"></div>
+		</div>
 	</div>
 	<div class="row">
 		<div class="col-md-6 col-xs-12">
