Change font size and padding spaces for the Committees page

--- a/_includes/pc.html
+++ b/_includes/pc.html
@@ -1,8 +1,8 @@
 <!-- PC Section -->
-<section id="PC" class="team">
-  <div class="content-wrapper post-body">
+<section id="PC" class="team" style="padding-top: 0px; padding-bottom: 0px">
+  <div class="content-wrapper post-body" >
     <h4>Program Committee</h4>
-      <ul style="list-style-type: none;">
+      <ul style="list-style-type: none; font-size: 16px">
 	{% for member in site.data.pc %} 
             <li><span class="name">{{ member.name }} {{ member.surname }},
                 <span class="company">{{ member.company }}</span>
