--- a/_includes/team.html
+++ b/_includes/team.html
@@ -1,5 +1,5 @@
 <!-- Begin Team List-->
-<section id="team" class="team">
+<section id="team" class="team" style="padding-top: 0px; padding-bottom: 0px">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
             <h3>{{ site.teamBlockTitle }}</h3>
