--- a/_includes/pc.html
+++ b/_includes/pc.html
@@ -1,5 +1,5 @@
 <!-- PC Section -->
-<section id="PC" class="team" style="padding-top: 0px; padding-bottom: 0px">
+<section id="PC" class="team" style="padding-top: 0px">
   <div class="content-wrapper post-body" >
     <h4>Program Committee</h4>
       <ul style="list-style-type: none; font-size: 16px">
