--- a/_includes/speakers-list.html
+++ b/_includes/speakers-list.html
@@ -2,7 +2,7 @@
 <section id="speakers" class="speakers">
     <div class="content-wrapper">
         <div class="col-lg-10 col-lg-offset-1">
-            <div class="row text-left appear-animation-trigger">
+            <div class="row text-left appear-animation-trigger" style="justify-content: center; display: flex;">
                 {% for speaker in site.data.speakers %}
                 <div class="effect-wrapper appear-animation col-md-4 col-sm-6 col-xs-12">
                     <div class="lily-effect ribbon-activator">
