Add talk abstracts and bio

--- a/_includes/schedule2025.html
+++ b/_includes/schedule2025.html
@@ -1,5 +1,6 @@
 
 <link href="{{ "/css/program.css" | prepend: site.baseurl }}" rel="stylesheet"> 
+<link href="{{ "/css/fa.css" | prepend: site.baseurl }}" rel="stylesheet"> 
 
 <!-- Begin Schedule Section -->
 <section id="schedule" class="schedule">
@@ -47,6 +48,23 @@
                                     <button type="button" class="btn-keynote" data-toggle="collapse" data-target="#keynote1"> Keynote
                                         I</button>
                                 </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-md-3 col-sm3 col-xs-3 col-4"></div>
+                                <div class="col-md-9 col-sm9 col-xs-9 col-8"><div id="keynote1" class="collapse in" style="">
+                                        <p class="text">
+                                        <b>Training AI by Medical Data & Using AI on Medical Data: Privacy and Data-Quality</b>
+                                        </p>
+                                        <button class="btn-abstract" data-toggle="collapse" data-target="#collapsek1" aria-expanded="true"><i class="fas fa-pencil-alt" aria-hidden="true"></i>Abstract</button>
+                                        <br>
+                                        <div class="collapse" id="collapsek1" style="">
+                                            <p class="text">
+                                            Recent AI research and development is mostly data-driven science, which is based on an increasingly more circular relationship between models and data; good data lets us train good models, and good models let us construct good data. This relationship is also true in medical AI, which has two (among many) added challenges specific to the medical domain: privacy and data quality. In this talk, I will first talk about training a clinical-domain LLM with synthetic clinical text so as to minimize privacy risk. Next, I will talk about how to use LLMs to evaluate medical data, specifically structured data and unstructured text, to detect potential inconsistencies between the two modalities.
+                                            </p>
+                                        </div>
+                                        <hr>
+                                    </div></div>
                             </div>
 
                             <div class="row">
@@ -129,10 +147,28 @@
                                     </a></p>
                                 </div>
                                 <div class="col-md-4 col-sm-4 col-xs-4 col-2">
-                                    <button type="button" class="btn-keynote" data-toggle="collapse" data-target="#keynote1"> Keynote
+                                    <button type="button" class="btn-keynote" data-toggle="collapse" data-target="#keynote2"> Keynote
                                         II</button>
                                 </div>
                             </div>
+
+                            <div class="row">
+                                <div class="col-md-3 col-sm3 col-xs-3 col-4"></div>
+                                <div class="col-md-9 col-sm9 col-xs-9 col-8"><div id="keynote2" class="collapse in" style="">
+                                        <p class="text">
+                                        <b>Training AI by Medical Data & Using AI on Medical Data: Privacy and Data-Quality</b>
+                                        </p>
+                                        <button class="btn-abstract" data-toggle="collapse" data-target="#collapsek2" aria-expanded="true"><i class="fas fa-pencil-alt" aria-hidden="true"></i>Abstract</button>
+                                        <br>
+                                        <div class="collapse" id="collapsek2" style="">
+                                            <p class="text">
+                                            TBA
+                                            </p>
+                                        </div>
+                                        <hr>
+                                    </div></div>
+                            </div>
+
 
                             <div class="row">
                                 <div class="col-md-3 col-sm-3 col-xs-3 col-4">
