Fix minor errors

--- a/_includes/schedule2025.html
+++ b/_includes/schedule2025.html
@@ -156,7 +156,7 @@
                                 <div class="col-md-3 col-sm3 col-xs-3 col-4"></div>
                                 <div class="col-md-9 col-sm9 col-xs-9 col-8"><div id="keynote2" class="collapse in" style="">
                                         <p class="text">
-                                        <b>Training AI by Medical Data & Using AI on Medical Data: Privacy and Data-Quality</b>
+                                        <b>Homomorphic Encryption for Protecting Genomic Privacy</b>
                                         </p>
                                         <button class="btn-abstract" data-toggle="collapse" data-target="#collapsek2" aria-expanded="true"><i class="fas fa-pencil-alt" aria-hidden="true"></i>Abstract</button>
                                         <br>
