Update bio and abstract

--- a/_includes/schedule2025.html
+++ b/_includes/schedule2025.html
@@ -58,12 +58,12 @@
                                         </p>
                                         <button class="btn-abstract" data-toggle="collapse" data-target="#collapsek1" aria-expanded="true"><i class="fas fa-pencil-alt" aria-hidden="true"></i>Abstract</button>
                                         <br>
+                                        <br>
                                         <div class="collapse" id="collapsek1" style="">
                                             <p class="text">
                                             Recent AI research and development is mostly data-driven science, which is based on an increasingly more circular relationship between models and data; good data lets us train good models, and good models let us construct good data. This relationship is also true in medical AI, which has two (among many) added challenges specific to the medical domain: privacy and data quality. In this talk, I will first talk about training a clinical-domain LLM with synthetic clinical text so as to minimize privacy risk. Next, I will talk about how to use LLMs to evaluate medical data, specifically structured data and unstructured text, to detect potential inconsistencies between the two modalities.
                                             </p>
                                         </div>
-                                        <hr>
                                     </div></div>
                             </div>
 
@@ -160,12 +160,12 @@
                                         </p>
                                         <button class="btn-abstract" data-toggle="collapse" data-target="#collapsek2" aria-expanded="true"><i class="fas fa-pencil-alt" aria-hidden="true"></i>Abstract</button>
                                         <br>
+                                        <br>
                                         <div class="collapse" id="collapsek2" style="">
                                             <p class="text">
-                                            TBA
+                                            Homomorphic encryption is an encryption method to enable arbitrary computation on encrypted data without decryption. It has emerged as one of the promising solutions to address privacy issues in computation over sensitive data.  In this talk, I will introduce the basic construction of homomorphic encryption. We then focus on the recent development of homomorphic encryption. I will conclude with the state-of-art benchmarks of privacy preserving genomic analysis.
                                             </p>
                                         </div>
-                                        <hr>
                                     </div></div>
                             </div>
 
